--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   flame: ^1.30.1
   flutter_fullscreen: ^1.2.0
+  csv: ^6.0.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -22,3 +24,4 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/data/flappy_bart_nouns.csv
