--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_fullscreen: ^1.2.0
   csv: ^6.0.0
   shared_preferences: ^2.5.3
+  flame_audio: ^2.11.8
 
 dev_dependencies:
   flutter_test:
@@ -24,4 +25,5 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/audio/
     - assets/data/flappy_bart_nouns.csv
