--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   flame: ^1.30.1
-  flutter_fullscreen: ^1.2.0
   csv: ^6.0.0
   shared_preferences: ^2.5.3
   flame_audio: ^2.11.8
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
